Fix *-row-col nonsense (now *-row-gap)

--- a/src/scss/_showcase.scss
+++ b/src/scss/_showcase.scss
@@ -28,11 +28,11 @@
   &__list:where(:not(.splide__list)) {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--showcase-item-min-width, #{get_clamp(160, 175, 375, 480)})), 1fr));
-    gap: var(--showcase-row-gap, max(3cqw, 1.5rem)) var(--showcase-row-col, max(3cqw, 1.5rem));
+    gap: var(--showcase-row-gap, max(3cqw, 1.5rem)) var(--showcase-col-gap, max(3cqw, 1.5rem));
 
     // Fallback
     @supports not (width: 1cqw) {
-      gap: var(--showcase-row-gap, 1.5rem) var(--showcase-row-col, 1.5rem);
+      gap: var(--showcase-row-gap, 1.5rem) var(--showcase-col-gap, 1.5rem);
     }
   }
 
